--- a/index.html
+++ b/index.html
@@ -187,19 +187,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
               </div>
-              <p>
-                "تجربة رائعة مع الأوائل! المدربين محترفين والسيارات ممتازة. حصلت
-                على رخصتي من أول مرة بفضلهم."
-              </p>
-              <div class="testimonial-author">
-                <img
-                  src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop&crop=face"
-                  alt="أحمد محمد"
-                />
-                <div>
-                  <h5>أحمد محمد</h5>
-                  <span>متدرب سابق</span>
-                </div>
+              <div class="testimonial-image">
+                <img src="images/1.jpg" alt="رأي العميل" />
               </div>
             </div>
           </div>
@@ -213,19 +202,53 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
               </div>
-              <p>
-                "أفضل مدرسة لتعليم القيادة في الإسكندرية. التعامل راقي والأسعار
-                مناسبة."
-              </p>
-              <div class="testimonial-author">
-                <img
-                  src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop&crop=face"
-                  alt="محمد حسن"
-                />
-                <div>
-                  <h5>محمد حسن</h5>
-                  <span>متدرب سابق</span>
-                </div>
+              <div class="testimonial-image">
+                <img src="images/2.jpg" alt="رأي العميل" />
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="testimonial-image">
+                <img src="images/3.jpg" alt="رأي العميل" />
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="testimonial-image">
+                <img src="images/4.jpg" alt="رأي العميل" />
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="testimonial-image">
+                <img src="images/5.jpg" alt="رأي العميل" />
               </div>
             </div>
           </div>
@@ -305,6 +328,30 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Google Maps Section -->
+    <section class="maps-section">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">موقعنا على الخريطة</h2>
+          <p class="section-subtitle">
+            يمكنك الوصول إلينا بسهولة من خلال الخريطة
+          </p>
+        </div>
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3412.3658300210345!2d29.9493072!3d31.2105926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f5c493ec02a9e9%3A0xe8a17f22d532f36a!2z2KfZhNij2YjYp9im2YQg2YTYqti52YTZitmFINmC2YrYp9iv2Kkg2KfZhNiz2YrYp9ix2KfYqg!5e0!3m2!1sen!2seg!4v1751061716030!5m2!1sen!2seg"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
         </div>
       </div>
     </section>
