--- a/index.html
+++ b/index.html
@@ -6,8 +6,108 @@
     <title>الأوائل لتعليم قيادة السيارات - الإسكندرية</title>
     <meta
       name="description"
-      content="الأوائل لتعليم قيادة السيارات في الإسكندرية - تعليم احترافي مع أفضل المدربين"
+      content="الأوائل لتعليم قيادة السيارات في الإسكندرية - تعليم احترافي مع أفضل المدربين المؤهلين. سيارات حديثة، مواعيد مرنة، معدل نجاح 95%. احجز الآن!"
     />
+    <meta
+      name="keywords"
+      content="تعليم قيادة السيارات, مدرسة قيادة, الإسكندرية, رخصة قيادة, مدربين مؤهلين, سيارات حديثة, تعليم نظري وعملي, الأوائل"
+    />
+    <meta name="author" content="الأوائل لتعليم قيادة السيارات" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Arabic" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
+    <meta name="theme-color" content="#667eea" />
+    <meta name="msapplication-TileColor" content="#667eea" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="الأوائل لتعليم القيادة" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://awaelcar.com" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://awaelcar.com" />
+    <meta
+      property="og:title"
+      content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
+    />
+    <meta
+      property="og:description"
+      content="الأوائل لتعليم قيادة السيارات في الإسكندرية - تعليم احترافي مع أفضل المدربين المؤهلين. سيارات حديثة، مواعيد مرنة، معدل نجاح 95%."
+    />
+    <meta property="og:image" content="https://awaelcar.com/images/logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="ar_EG" />
+    <meta property="og:site_name" content="الأوائل لتعليم قيادة السيارات" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://awaelcar.com" />
+    <meta
+      property="twitter:title"
+      content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
+    />
+    <meta
+      property="twitter:description"
+      content="الأوائل لتعليم قيادة السيارات في الإسكندرية - تعليم احترافي مع أفضل المدربين المؤهلين. سيارات حديثة، مواعيد مرنة، معدل نجاح 95%."
+    />
+    <meta
+      property="twitter:image"
+      content="https://awaelcar.com/images/logo.jpg"
+    />
+
+    <!-- Structured Data / JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "الأوائل لتعليم قيادة السيارات",
+        "description": "مدرسة تعليم قيادة السيارات في الإسكندرية مع أفضل المدربين المؤهلين والسيارات الحديثة",
+        "url": "https://awaelcar.com",
+        "telephone": "+201000713111",
+        "email": "info@awaelcar.com",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "22 تعاونيات سموحة بجوار مول زهران الدور الأرضى",
+          "addressLocality": "الإسكندرية",
+          "addressCountry": "مصر"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 31.2105926,
+          "longitude": 29.9493072
+        },
+        "openingHours": [
+          "Mo-Th 09:00-21:00",
+          "Fr 14:00-21:00",
+          "Sa 09:00-21:00"
+        ],
+        "priceRange": "$$",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "500"
+        },
+        "image": "https://awaelcar.com/images/logo.jpg",
+        "sameAs": [
+          "https://www.facebook.com/elawaelcar/",
+          "https://wa.me/201000713111"
+        ]
+      }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
