--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <meta name="apple-mobile-web-app-title" content="الأوائل لتعليم القيادة" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://awaelcar.com" />
+    <link rel="canonical" href="https://awaeldrive.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://awaelcar.com" />
+    <meta property="og:url" content="https://awaeldrive.com" />
     <meta
       property="og:title"
       content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
@@ -38,7 +38,10 @@
       property="og:description"
       content="الأوائل لتعليم قيادة السيارات في الإسكندرية - تعليم احترافي مع أفضل المدربين المؤهلين. سيارات حديثة، مواعيد مرنة، معدل نجاح 95%."
     />
-    <meta property="og:image" content="https://awaelcar.com/images/logo.jpg" />
+    <meta
+      property="og:image"
+      content="https://awaeldrive.com/images/logo.jpg"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="ar_EG" />
@@ -46,7 +49,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://awaelcar.com" />
+    <meta property="twitter:url" content="https://awaeldrive.com" />
     <meta
       property="twitter:title"
       content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
@@ -57,7 +60,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://awaelcar.com/images/logo.jpg"
+      content="https://awaeldrive.com/images/logo.jpg"
     />
 
     <!-- Structured Data / JSON-LD -->
@@ -67,9 +70,9 @@
         "@type": "LocalBusiness",
         "name": "الأوائل لتعليم قيادة السيارات",
         "description": "مدرسة تعليم قيادة السيارات في الإسكندرية مع أفضل المدربين المؤهلين والسيارات الحديثة",
-        "url": "https://awaelcar.com",
+        "url": "https://awaeldrive.com",
         "telephone": "+201000713111",
-        "email": "info@awaelcar.com",
+        "email": "info@awaeldrive.com",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "22 تعاونيات سموحة بجوار مول زهران الدور الأرضى",
@@ -92,7 +95,7 @@
           "ratingValue": "4.8",
           "reviewCount": "500"
         },
-        "image": "https://awaelcar.com/images/logo.jpg",
+        "image": "https://awaeldrive.com/images/logo.jpg",
         "sameAs": [
           "https://www.facebook.com/elawaelcar/",
           "https://wa.me/201000713111"
@@ -412,7 +415,9 @@
               </div>
               <div class="contact-details">
                 <h4>البريد الإلكتروني</h4>
-                <p><a href="mailto:info@awaelcar.com">info@awaelcar.com</a></p>
+                <p>
+                  <a href="mailto:info@awaeldrive.com">info@awaeldrive.com</a>
+                </p>
               </div>
             </div>
             <div class="contact-item">
@@ -487,7 +492,7 @@
               ><i class="fab fa-facebook"></i
             ></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:info@awaelcar.com" target="_blank"
+            <a href="mailto:info@awaeldrive.com" target="_blank"
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
