--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <meta name="apple-mobile-web-app-title" content="الأوائل لتعليم القيادة" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://awaeldrive.com" />
+    <link rel="canonical" href="https://drivealexandria.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://awaeldrive.com" />
+    <meta property="og:url" content="https://drivealexandria.com" />
     <meta
       property="og:title"
       content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
@@ -40,7 +40,7 @@
     />
     <meta
       property="og:image"
-      content="https://awaeldrive.com/images/logo.jpg"
+      content="https://drivealexandria.com/images/logo.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -49,7 +49,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://awaeldrive.com" />
+    <meta property="twitter:url" content="https://drivealexandria.com" />
     <meta
       property="twitter:title"
       content="الأوائل لتعليم قيادة السيارات - الإسكندرية"
@@ -60,7 +60,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://awaeldrive.com/images/logo.jpg"
+      content="https://drivealexandria.com/images/logo.jpg"
     />
 
     <!-- Structured Data / JSON-LD -->
@@ -70,9 +70,9 @@
         "@type": "LocalBusiness",
         "name": "الأوائل لتعليم قيادة السيارات",
         "description": "مدرسة تعليم قيادة السيارات في الإسكندرية مع أفضل المدربين المؤهلين والسيارات الحديثة",
-        "url": "https://awaeldrive.com",
+        "url": "https://drivealexandria.com",
         "telephone": "+201000713111",
-        "email": "info@awaeldrive.com",
+        "email": "info@drivealexandria.com",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "22 تعاونيات سموحة بجوار مول زهران الدور الأرضى",
@@ -95,7 +95,7 @@
           "ratingValue": "4.8",
           "reviewCount": "500"
         },
-        "image": "https://awaeldrive.com/images/logo.jpg",
+        "image": "https://drivealexandria.com/images/logo.jpg",
         "sameAs": [
           "https://www.facebook.com/elawaelcar/",
           "https://wa.me/201000713111"
@@ -416,7 +416,9 @@
               <div class="contact-details">
                 <h4>البريد الإلكتروني</h4>
                 <p>
-                  <a href="mailto:info@awaeldrive.com">info@awaeldrive.com</a>
+                  <a href="mailto:info@drivealexandria.com"
+                    >info@drivealexandria.com</a
+                  >
                 </p>
               </div>
             </div>
@@ -492,7 +494,7 @@
               ><i class="fab fa-facebook"></i
             ></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:info@awaeldrive.com" target="_blank"
+            <a href="mailto:info@drivealexandria.com" target="_blank"
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
